--- a/hw01.md
+++ b/hw01.md
@@ -1,1 +1,16 @@
-我的第一次作业
+## Computer 
+
+## Computer science
+Computer science is the study of the theory, experimentation, and engineering that form the basis for the design and use of computers.
+
+## Software
+Software, is a generic term that refers to a collection of data or computer instructions that tell the computer how to work, in contrast to the physical hardware from which the system is built, that actually performs the work.
+
+## Software engineering
+Software engineering is the application of engineering to the development of software in a systematic method.
+
+## Alan turing
+Alan Mathison Turing OBE FRS (/ˈtjʊərɪŋ/; 23 June 1912 – 7 June 1954) was an English computer scientist, mathematician, logician, cryptanalyst, philosopher, and theoretical biologist.
+
+## Moore's law
+Moore's law is the observation that the number of transistors in a dense integrated circuit doubles about every two years.
