--- a/hw01.md
+++ b/hw01.md
@@ -1,4 +1,5 @@
 ## Computer 
+A computer is a device that can be instructed to carry out sequences of arithmetic or logical operations automatically via computer programming. 
 
 ## Computer science
 Computer science is the study of the theory, experimentation, and engineering that form the basis for the design and use of computers.
