--- a/hw02.md
+++ b/hw02.md
@@ -1,1 +1,9 @@
+# 名词（2）
 ## information
+Information is any entity or form that provides the answer to a question of some kind or resolves uncertainty. 
+## positional notation
+Positional notation is a method of representing or encoding numbers. 
+## algorithm
+In mathematics and computer science, an algorithm is an unambiguous specification of how to solve a class of problems. 
+## software bug
+A software bug is an error, flaw, failure or fault in a computer program or system that causes it to produce an incorrect or unexpected result, or to behave in unintended ways.
