--- a/hw02.md
+++ b/hw02.md
@@ -7,3 +7,8 @@ Positional notation is a method of representing or encoding numbers.
 In mathematics and computer science, an algorithm is an unambiguous specification of how to solve a class of problems. 
 ## software bug
 A software bug is an error, flaw, failure or fault in a computer program or system that causes it to produce an incorrect or unexpected result, or to behave in unintended ways.
+## 英文翻译
+二进制    Binary system
+八进制    Octal number system
+十进制    Decimal system
+十六进制  Hexadecimal
