--- a/hw02.md
+++ b/hw02.md
@@ -1,4 +1,7 @@
 # 名词（2）
+## 进制转换
+ 1分12秒 = （ ）毫秒 ② （7A）13 = （ ）10 ③ （7A）16 = （ ）10 ④ （7A）16 = （ ）2 = （ ）8 ⑤ （1011011）2 = （ ）8  = （ ）16 ⑥ （678）10 = （ ）2 = （ ）8 ⑦ （111）2 + （101）2 = （ ）2
+
 ## information
 Information is any entity or form that provides the answer to a question of some kind or resolves uncertainty. 
 ## positional notation
