--- a/hw01.md
+++ b/hw01.md
@@ -1,17 +1,23 @@
 ## Computer 
 A computer is a device that can be instructed to carry out sequences of arithmetic or logical operations automatically via computer programming. 
+计算机是一种可以通过计算机程序自动执行一系列算术或逻辑运算的装置。
 
 ## Computer science
 Computer science is the study of the theory, experimentation, and engineering that form the basis for the design and use of computers.
+计算机科学是对构成计算机设计和使用基础的理论、实验和工程的研究。
 
 ## Software
 Software, is a generic term that refers to a collection of data or computer instructions that tell the computer how to work, in contrast to the physical hardware from which the system is built, that actually performs the work.
+软件，是一个通用术语，指的是一组数据或计算机指令，这些指令告诉计算机如何工作，与系统的物理硬件不同的是，这些软件实际执行工作。
 
 ## Software engineering
 Software engineering is the application of engineering to the development of software in a systematic method.
+软件工程是将工程应用于软件开发的一种系统化的方法。
 
 ## Alan turing
-Alan Mathison Turing OBE FRS (/ˈtjʊərɪŋ/; 23 June 1912 – 7 June 1954) was an English computer scientist, mathematician, logician, cryptanalyst, philosopher, and theoretical biologist.
+Alan Mathison Turing OBE FRS ( 23 June 1912 – 7 June 1954) was an English computer scientist, mathematician, logician, cryptanalyst, philosopher, and theoretical biologist.
+艾伦·麦希森·图灵OBE，FRS(1912年6月23日- 1954年6月7日）英国计算机科学家、数学家、逻辑学家、密码分析家、哲学家和理论生物学家。
 
 ## Moore's law
 Moore's law is the observation that the number of transistors in a dense integrated circuit doubles about every two years.
+摩尔定律发现密集集成电路中晶体管的数量大约每两年翻一番。
