--- a/hw02.md
+++ b/hw02.md
@@ -8,14 +8,22 @@
 （678）10 = （1010100110）2 = （1246）8  
 （111）2 + （101）2 = （1100）2
 
-## information
-Information is any entity or form that provides the answer to a question of some kind or resolves uncertainty. 
-## positional notation
-Positional notation is a method of representing or encoding numbers. 
-## algorithm
-In mathematics and computer science, an algorithm is an unambiguous specification of how to solve a class of problems. 
-## software bug
-A software bug is an error, flaw, failure or fault in a computer program or system that causes it to produce an incorrect or unexpected result, or to behave in unintended ways.
+## information  信息
+Information is any entity or form that provides the answer to a question of some kind or resolves uncertainty.   
+信息是为某种问题提供答案或解决不确定性的任何实体或形式。
+
+## positional notation  位置符号
+Positional notation is a method of representing or encoding numbers.  
+位置符号是一种表示或编码数字的方法。
+
+## algorithm  算法
+In mathematics and computer science, an algorithm is an unambiguous specification of how to solve a class of problems.   
+在数学和计算机科学中，算法是如何解决一类问题的明确说明。
+
+## software bug  软件漏洞
+A software bug is an error, flaw, failure or fault in a computer program or system that causes it to produce an incorrect or unexpected result, or to behave in unintended ways.  
+软件漏洞是计算机程序或系统中的错误、缺陷、故障或故障，导致其产生不正确或意外的结果，或以非预期的方式运行。
+
 ## 英文翻译
 二进制    Binary system  
 八进制    Octal number system  
