--- a/hw03.md
+++ b/hw03.md
@@ -1,2 +1,17 @@
 # 作业 (三)
-##
+## part 1
+（1）不溢出，不溢出，不溢出  
+（2）溢出  
+（3）不溢出  
+（4）不溢出，不溢出，溢出  
+（5）无误差  
+（6）无误差
+（7）有误差
+## part 2
+（一）Method of complements 补数法  
+In mathematics and computing, the method of complements is a technique used to subtract one number from another using only addition of positive numbers.  
+在数学和计算中，补数法是一种仅用正数的加法从一个数字中减去另一个数字的技术。  
+（二）Byte 字节
+The byte is a unit of digital information that most commonly consists of eight bits, representing a binary number.   
+字节是数字信息的单位，通常由8位组成，代表一个二进制数。  
+（三）Integer (computer science)
