--- a/hw03.md
+++ b/hw03.md
@@ -1,5 +1,4 @@
-# 作业 (三)
-## part 1
+# part 1
 （1）不溢出，不溢出，不溢出  
 （2）溢出  
 （3）不溢出  
@@ -7,22 +6,27 @@
 （5）无误差  
 （6）无误差
 （7）有误差
-## part 2
-（一）Method of complements 补数法  
+# part 2
+## （一）Method of complements 补数法  
 In mathematics and computing, the method of complements is a technique used to subtract one number from another using only addition of positive numbers.  
 在数学和计算中，补数法是一种仅用正数的加法从一个数字中减去另一个数字的技术。  
-（二）Byte 字节  
+## （二）Byte 字节  
 The byte is a unit of digital information that most commonly consists of eight bits, representing a binary number.   
 字节是数字信息的单位，通常由8位组成，代表一个二进制数。  
-（三）Integer (computer science)   整数（计算机科学）  
+## （三）Integer (computer science)   整数（计算机科学）  
 In computer science, an integer is a datum of integral data type, a data type that represents some range of mathematical integers.   
 在计算机科学中，整数是整数数据类型的基准，数据类型表示一些数学整数的范围。    
- （四）Floating point  浮点数  
+## （四）Floating point  浮点数  
  In computing, floating-point arithmetic (FP) is arithmetic using formulaic representation of real numbers as an approximation so as to support a trade-off between range and precision.   
 在计算中，浮点运算(FP)是利用实数的公式化表示作为近似，以支持范围和精度之间的权衡的一种算法。
-## 证明
- （一）  
+# 证明
+## （一）  
  这样表示非常方便，因为一个数加上它的反码就是所有位为1，然后补码等于反码加1，所以这个数加上它的补码就等于0，也就表示了这个数是它的相反数。  
- （二）  
- x = -0x1f，转换为十进制数为-31.而-31的原码表示为1000 0000 0000 0000 0000 0000 0001 1111，最高位为符号位（1为负数，0为非负数）。保持原码符号位不变，其余为取反后再加1即可得到其补码表示1111 1111 1111 1111 1111 1111 1110 0001，然后把该二进制数转换为十六进制可得到0xffffffe1。
+## （二）  
+ 用八进制描述变量x=351  
+## （三）  
+ x = -0x1f，转换为十进制数为-31.而-31的原码表示为1000 0000 0000 0000 0000 0000 0001 1111，最高位为符号位（1为负数，0为非负数）。保持原码符号位不变，其余为取反后再加1即可得到其补码表示1111 1111 1111 1111 1111 1111 1110 0001，然后把该二进制数转换为十六进制可得到0xffffffe1。  
+## （四）
+NaN，是Not a Number的缩写，在IEEE浮点数算术标准（IEEE 754）中定义，表示一些特殊数值（无穷与非数值（NaN）），为许多CPU与浮点运算器所采用。
+ 
   
