--- a/hw04.md
+++ b/hw04.md
@@ -1,3 +1,19 @@
-# 解释名词
+# Part 1
 ## ASCII
-  ASCII abbreviated from American Standard Code for Information Interchange, is a character encoding standard for electronic communication. 
+  ASCII,abbreviated from American Standard Code for Information Interchange, is a character encoding standard for electronic communication.   
+  ASCII（美国信息交换标准代码）是基于拉丁字母的一套计算机编码系统。
+## Color
+Color (American English) or colour (Commonwealth English) is the characteristic of human visual perception described through color categories, with names such as red, orange, yellow, green, blue, or purple.   
+颜色或色彩是通过眼、脑和我们的生活经验所产生的一种对光的视觉效应。
+# Part 2
+## (1)
+"A"的ASCII码：65 ， Unicode码：65 ， utf-8编码:      
+“中”的ASCII码：无  ， Unicode码；20013 ，utf-8编码：4E2D
+## (2)
+黄色的RGB编码是（255，255，0）
+## (3)
+三种格式中，png格式显示质量最好。  
+相对于BMP格式，压缩率分别为
+## (4)
+ Winrar压缩文件是lossless方法.
+     
