--- a/hw04.md
+++ b/hw04.md
@@ -7,7 +7,7 @@ Color (American English) or colour (Commonwealth English) is the characteristic 
 颜色或色彩是通过眼、脑和我们的生活经验所产生的一种对光的视觉效应。
 # Part 2
 ## (1)
-"A"的ASCII码：65 ， Unicode码：65 ， utf-8编码:      
+"A"的ASCII码：65 ， Unicode码：65 ， utf-8编码: 0041     
 “中”的ASCII码：无  ， Unicode码；20013 ，utf-8编码：4E2D
 ## (2)
 黄色的RGB编码是（255，255，0）
@@ -16,4 +16,3 @@ Color (American English) or colour (Commonwealth English) is the characteristic 
 相对于BMP格式，压缩率分别为
 ## (4)
  Winrar压缩文件是lossless方法.
-     
