--- a/hw04.md
+++ b/hw04.md
@@ -13,6 +13,6 @@ Color (American English) or colour (Commonwealth English) is the characteristic 
 黄色的RGB编码是（255，255，0）
 ## (3)
 三种格式中，png格式显示质量最好。  
-相对于BMP格式，压缩率分别为
+相对于BMP格式，压缩率分别为15：1，10：1，2：1.
 ## (4)
  Winrar压缩文件是lossless方法.
