--- a/hw05.md
+++ b/hw05.md
@@ -1,6 +1,13 @@
 # part 1
 ## （1）与门
 
+| In A | IN B | Out |
+|:-:|:-:|:-:|
+| 0 | 0 | 0 |
+| 0 | 1 | 0 |
+| 1 | 0 | 0 |
+| 1 | 1 | 1 |
+
 ## （2）或门
 
 ## （3）电路图
