--- a/hw05.md
+++ b/hw05.md
@@ -1,16 +1,27 @@
 # part 1
-## （1）与门
-
+##  Give the three representations of an AND gate and say in your words what AND means. 
+1）Boolean Expression :X = AB   
+2）Truth Table  
 | In A | IN B | Out |
 |:-:|:-:|:-:|
 | 0 | 0 | 0 |
 | 0 | 1 | 0 |
 | 1 | 0 | 0 |
 | 1 | 1 | 1 |
-
-## （2）或门
-
-## （3）电路图
+3）Logic Diagram Symbol ：  
+4) AND 是指AB同时为1时结果为1，否则为0
+## Give the three representations of an XOR gate and say in your words what XOR means. 
+1) Boolean Expression :X = A ⊕ B   
+2）Truth Table    
+| In A | IN B | Out |
+|:-:|:-:|:-:|
+| 0 | 0 | 0 |
+| 0 | 1 | 1 |
+| 1 | 0 | 1 |
+| 1 | 1 | 0 |  
+3）Logic Diagram Symbol ：  
+4) XOR是指AB不同时为1，相同时为0
+## Draw a circuit diagram corresponding to the following Boolean expression: (A + B)(B + C) 
 
 ## （4）真值表
 
