--- a/hw05.md
+++ b/hw05.md
@@ -13,7 +13,7 @@
 
 3）Logic Diagram Symbol ：    
 
-![](https://pic002.cnblogs.com/images/2012/27325/2012112714105721.png)
+![images](https://pic002.cnblogs.com/images/2012/27325/2012112714105721.png)
 4) AND 是指AB同时为1时结果为1，否则为0
 ## Give the three representations of an XOR gate and say in your words what XOR means. 
 1) Boolean Expression :X = A ⊕ B   
