--- a/hw05.md
+++ b/hw05.md
@@ -13,10 +13,13 @@
 
 3）Logic Diagram Symbol ：    
 
-![images](https://pic002.cnblogs.com/images/2012/27325/2012112714105721.png)
-4) AND 是指AB同时为1时结果为1，否则为0
+![images](https://pic002.cnblogs.com/images/2012/27325/2012112714105721.png)  
+
+4) AND 是指AB同时为1时结果为1，否则为0  
+
 ## Give the three representations of an XOR gate and say in your words what XOR means. 
-1) Boolean Expression :X = A ⊕ B   
+1) Boolean Expression :X = A ⊕ B     
+
 2）Truth Table    
 
 | In A | IN B | Out |
@@ -26,17 +29,23 @@
 | 1 | 0 | 1 |
 | 1 | 1 | 0 |  
 
-3）Logic Diagram Symbol ：  
-4) XOR是指AB不同时为1，相同时为0
+3）Logic Diagram Symbol ：   
+
+![images](https://pic002.cnblogs.com/images/2012/27325/2012112714321739.png)  
+
+4) XOR是指AB不同时为1，相同时为0  
+
 ## Draw a circuit diagram corresponding to the following Boolean expression: (A + B)(B + C) 
 
-## （4）真值表
+##  Show the behavior of the following circuit with a truth table:
 
-## （5）
+## What is circuit equivalence? Use truth table to prove the following formula. (AB)’ = A’ + B’
 
-## （6）
 
-## （7）
+## There are eight 1bit full adder integrated circuits. Combine them to 8bit adder circuit using the following box diagram.
+
+
+## 
 
 # part 2
 ## (1) Logic gate 逻辑门
