--- a/hw05.md
+++ b/hw05.md
@@ -37,7 +37,14 @@
 
 ## Draw a circuit diagram corresponding to the following Boolean expression: (A + B)(B + C) 
 
-##  Show the behavior of the following circuit with a truth table:
+##  Show the behavior of the following circuit with a truth table
+  
+| In A | IN B | IN A' | IN AB | OUT |
+|:-:|:-:|:-:|:-:|:-:|
+| 0 | 0 | 1 | 0 | 1 |
+| 0 | 1 | 1 | 0 | 1 |
+| 1 | 0 | 0 | 0 | 0 |
+| 1 | 1 | 0 | 1 | 1 | 
 
 ## What is circuit equivalence? Use truth table to prove the following formula. (AB)’ = A’ + B’
 
