--- a/hw05.md
+++ b/hw05.md
@@ -39,7 +39,7 @@
 
 ##  Show the behavior of the following circuit with a truth table
   
-| In A | IN B | IN A' | IN AB | OUT |
+| In A | IN B | IN A’ | IN AB | OUT A’⊕AB |
 |:-:|:-:|:-:|:-:|:-:|
 | 0 | 0 | 1 | 0 | 1 |
 | 0 | 1 | 1 | 0 | 1 |
