--- a/hw05.md
+++ b/hw05.md
@@ -58,16 +58,28 @@
 ## There are eight 1bit full adder integrated circuits. Combine them to 8bit adder circuit using the following box diagram.
 
 
-## 
+## Fill the follow expression
 
+(1)  (X8X7X6X5X4X3X2X1)2 or (00001111)2 = ( 0000X2+1 X3+1 X2+1 X1+1 )2   
+(2)  (X8X7X6X5X4X3X2X1)2 xor (00001111)2 = ( X8⊕⊕0  X7⊕⊕0 X6⊕⊕0 X5⊕⊕0 X4⊕⊕1 X3⊕⊕1 X2⊕⊕1 X1⊕⊕1 )2   
+(3)  ((X8X7X6X5X4X3X2X1)2 and(11110000)2 ) or  (not (X8X7X6X5X4X3X2X1)2 and (00001111)2)  =  ( X8X7X6X5X4X3X2X1 )2
+ 
 # part 2
 ## (1) Logic gate 逻辑门
+
 In electronics, a logic gate is an idealized or physical device implementing a Boolean function; that is, it performs a logical operation on one or more binary inputs and produces a single binary output.  
-在电子学中，逻辑门是实现布尔函数的理想或物理设备;也就是说，它对一个或多个二进制输入执行逻辑操作，并生成单个二进制输出。
+在电子学中，逻辑门是实现布尔函数的理想或物理设备;也就是说，它对一个或多个二进制输入执行逻辑操作，并生成单个二进制输出。  
+
 ## (2) Boolean algebra 布尔代数
+
 In mathematics and mathematical logic, Boolean algebra is the branch of algebra in which the values of the variables are the truth values true and false, usually denoted 1 and 0 respectively.   
-在数学和数学逻辑中，布尔代数是代数的一个分支，其中变量的值为真值和假值，通常分别表示为1和0。
+在数学和数学逻辑中，布尔代数是代数的一个分支，其中变量的值为真值和假值，通常分别表示为1和0。  
+
 ## (3) Flip-flop
-中文翻译：触发器
+
+中文翻译：触发器  
+
 ## (4) SR锁存器
-储存1位二值信号。
+
+储存1位二值信号。  
+
