--- a/hw05.md
+++ b/hw05.md
@@ -1,5 +1,6 @@
 # part 1
 ##  Give the three representations of an AND gate and say in your words what AND means. 
+
 1）Boolean Expression :X = AB     
 
 2）Truth Table  
@@ -18,7 +19,8 @@
 4) AND 是指AB同时为1时结果为1，否则为0  
 
 ## Give the three representations of an XOR gate and say in your words what XOR means. 
-1) Boolean Expression :X = A ⊕ B     
+
+1）Boolean Expression :X = A ⊕ B     
 
 2）Truth Table    
 
