--- a/hw05.md
+++ b/hw05.md
@@ -16,7 +16,7 @@
 
 ![images](https://pic002.cnblogs.com/images/2012/27325/2012112714105721.png)  
 
-4) AND 是指AB同时为1时结果为1，否则为0  
+4）AND 是指AB同时为1时结果为1，否则为0  
 
 ## Give the three representations of an XOR gate and say in your words what XOR means. 
 
@@ -35,7 +35,7 @@
 
 ![images](https://pic002.cnblogs.com/images/2012/27325/2012112714321739.png)  
 
-4) XOR是指AB不同时为1，相同时为0  
+4）XOR是指AB不同时为1，相同时为0  
 
 ## Draw a circuit diagram corresponding to the following Boolean expression: (A + B)(B + C) 
 
