--- a/hw05.md
+++ b/hw05.md
@@ -59,7 +59,7 @@
 
 ## There are eight 1bit full adder integrated circuits. Combine them to 8bit adder circuit using the following box diagram.
   
- ![images] (http://a3.qpic.cn/psb?/V13DPvgV0M3oT5/5q.PdJrkXmnmWye8w*iAR3U.DQIkeTtd446orqVdDSU)
+ ![images] (https://pan.baidu.com/share/link?shareid=1012612793&uk=1450557866)
 
 ## Fill the follow expression
 
