--- a/hw05.md
+++ b/hw05.md
@@ -14,7 +14,7 @@
 
 3）Logic Diagram Symbol ：    
 
-![image](https://pic002.cnblogs.com/images/2012/27325/2012112714105721.png)  
+![images](https://pic002.cnblogs.com/images/2012/27325/2012112714105721.png)  
 
 4）AND 是指AB同时为1时结果为1，否则为0  
 
@@ -33,7 +33,7 @@
 
 3）Logic Diagram Symbol ：   
 
-![image](https://pic002.cnblogs.com/images/2012/27325/2012112714321739.png)  
+![images](https://pic002.cnblogs.com/images/2012/27325/2012112714321739.png)  
 
 4）XOR是指AB不同时为1，相同时为0  
 
