--- a/hw06.md
+++ b/hw06.md
@@ -1,21 +1,31 @@
 ## According to the von Neumann architecture, List basic parts of a computer.
-
+A processing unit that contains an arithmetic logic unit and processor registers  
+A control unit that contains an instruction register and program counter  
+Memory that stores data and instructions  
+External mass storage  
+Input and output mechanisms
 ## A computer has 64 MB (megabytes) of memory. How many bits are needed to address any single byte in memory? 
-
+26位
 ## List basic parts of a CPU, include cache or not?
-
+不包括
 ## What mean secondary storage. List some on your PC. 
-
+硬盘，光碟
 ## CPU
-
+A central processing unit (CPU) is the electronic circuitry within a computer that carries out the instructions of a computer program by performing the basic arithmetic, logical, control and input/output (I/O) operations specified by the instructions.   
+中央处理单元(CPU)是计算机内部的电子电路，通过执行指令指定的基本算术、逻辑、控制和输入/输出(I/O)操作来执行计算机程序的指令。
 ## RAM
-
+Random-access memory (RAM /ræm/) is a form of computer data storage that stores data and machine code currently being used.   
+随机存取存储器(RAM)是一种计算机数据存储器，它存储当前使用的数据和机器代码。
 ## ROM 
-
+Read-only memory (ROM) is a type of non-volatile memory used in computers and other electronic devices.   
+只读存储器(ROM)是一种用于计算机和其他电子设备的非易失性存储器。
 ## Bus (computing)
-
+In computer architecture, a bus (a contraction of the Latin omnibus) is a communication system that transfers data between components inside a computer, or between computers.  
+在计算机体系结构中，总线(拉丁语omnibus的缩写)是一种通信系统，用于在计算机内部或计算机之间的组件之间传输数据。
 ## Parallel Computing
-
+Parallel computing is a type of computation in which many calculations or the execution of processes are carried out simultaneously.  
+并行计算是一种同时进行许多计算或过程执行的计算类型。
 ## 云计算（cloud computing）
-
-##小孙买了计算机主板，说明书表明“支持双通道DDR3-1333内存， 最大支持16G”
+云计算（Cloud Computing）是基于互联网的相关服务的增加、使用和交付模式，通常涉及通过互联网来提供动态易扩展且经常是虚拟化的资源。
+## 小孙买了计算机主板，说明书表明“支持双通道DDR3-1333内存， 最大支持16G”
+（1）
