--- a/hw06.md
+++ b/hw06.md
@@ -28,4 +28,7 @@ Parallel computing is a type of computation in which many calculations or the ex
 ## 云计算（cloud computing）
 云计算（Cloud Computing）是基于互联网的相关服务的增加、使用和交付模式，通常涉及通过互联网来提供动态易扩展且经常是虚拟化的资源。
 ## 小孙买了计算机主板，说明书表明“支持双通道DDR3-1333内存， 最大支持16G”
-（1）
+（1）3指的是接口，1333指的是内存频率  
+（2）不能  
+（3）能  
+（4）34位
