--- a/hw07.md
+++ b/hw07.md
@@ -1,40 +1,46 @@
-## Program with machine language according to the following c. int_8 a = 1;  int_8 c = a + 3;   
-# 1）Write your assembly code & machine code  
+# Program with machine language according to the following c. int_8 a = 1;  int_8 c = a + 3;   
+## 1）Write your assembly code & machine code  
  LOD # 1–>STO X –> LOD X –> ADD#3 –>  STO Y –>  HLT
  
-# 2）Explain machine code execution with the fetch-decode-execute cycle   
+## 2）Explain machine code execution with the fetch-decode-execute cycle   
 Main memory –> fetch instruction –> Decode instruction –>Registers –>Get data –>Execute the instruction –> Main memory  
 
-# 3）Explain functions about  IR, PC, ACC registers in a CPU 
+## 3）Explain functions about  IR, PC, ACC registers in a CPU 
 IR：指令寄存器，用来保存当前正在执行的一条指令   
 PC：程序计数器，存放下一条指令在内存中的地址   
 ACC：累加寄存器，功能是当运算器的算术逻辑单元(ALU)执行全部算术和逻辑运算时，为ALU提供一个工作区，暂时存放ALU运算结果  
 
-# 4）Explain physical meaning about vars a & c in a machine
+## 4）Explain physical meaning about vars a & c in a machine
 
-## 简答题 
-# 1）What are stored in memory?
+# 简答题 
+## 1）What are stored in memory?
 指令和数据  
 
-# 2）Can a data or a instruction stored in the same place?
+## 2）Can a data or a instruction stored in the same place?
 可以  
 
-# 3） Explain Instruction Format with example instructions.
+## 3） Explain Instruction Format with example instructions.
 例：ADD X :00000000 10000000  
 前八位称命令指示，第四位为寻址模式，例子中为0，表示操作数是该地址的内容；后八位称为操作数，表示数值或地址，例子中表示内存中地址128。整个例子表示加上将内存地址128中的数据  
 
-## 解释以下词汇 
-# 1）汇编语言（Assembly Language） 
+# 解释以下词汇 
+## 1）汇编语言（Assembly Language） 
 An assembly (or assembler) language,often abbreviated asm, is any low-level programming language in which there is a very strong correspondence between the program's statements and the architecture's machine code instructions.  
 汇编(或汇编)语言通常缩写为asm，是一种低级编程语言，在这种语言中，程序的语句和体系结构的机器码指令之间有很强的对应关系。  
 
-# 2）编译（Compiler） 
+## 2）编译（Compiler） 
 A compiler is computer software that primarily translates computer code from a high-level programming language to machine code to create an executable program.  
 编译器是一种计算机软件，主要是将计算机代码从高级编程语言转换成机器代码来创建可执行程序。  
 
-# 3）命令式语言（Imperative programming）
+## 3）命令式语言（Imperative programming）
 In computer science, imperative programming is a programming paradigm that uses statements that change a program's state.  
 在计算机科学中，命令式编程是一种使用语句来改变程序状态的编程范式。  
 
-# 4）函数编程语言（Functional programming） 
-# 5）过程式编程（Procedural programming）
+## 4）函数编程语言（Functional programming）
+In computer science, functional programming is a programming paradigm—a style of building the structure and elements of computer programs—that treats computation as the evaluation of mathematical functions and avoids changing-state and mutable data.   
+在计算机科学中，函数式编程是一种编程范式——一种构建计算机程序结构和元素的风格——它将计算视为数学函数的评估，并避免了状态的变化和数据的变化。  
+
+## 5）过程式编程（Procedural programming）
+Procedural programming is a programming paradigm, derived from structured programming, based upon the concept of the procedure call.  
+过程编程是一种基于过程调用概念的编程范式，它是从结构化编程中派生出来的。  
+
