--- a/hw08.md
+++ b/hw08.md
@@ -1,7 +1,54 @@
 # 阅读 PseudocodeStandard。（答案可以打印） 
 ## 1）用伪代码描述将十进制转换成16进制的方法 
-## 2）C语言实现（先用注释写好算法，然后翻译） 
+FUNCTION  A (num)   
+a = num % 16  
+IF number / 16 != 0 THEN   
+A(num/16)  
+CASE num % 16 OF   
+condition 10~15:PRINTF: A, B, C, D, E, F  
+OTHERS:   
+PRINT:a  
+
+## 2）C语言实现（先用注释写好算法，然后翻译）  
+#include<stdio.h>  
+void A (int num) {  
+  int a;  
+  a = num % 16;  
+  if (num >= 16)  
+    A(num / 16);  
+  switch(a) {  
+    case 10:  
+        printf("A");  
+        break;  
+    case 11:  
+        printf("B");  
+        break;
+    case 12:
+        printf("C");
+        break;
+    case 13:
+        printf("D");
+        break;
+    case 14:
+        printf("E");
+        break;
+    case 15:
+        printf("F");
+        break;
+    default:
+        printf("%d", a);
+  } 
+}
+ int main(void) {
+  int num;
+  scanf("%d", &num);
+  A(num);
+  return 0;
+}
+
 ## 3）使用 -1,  0,  1,  15,   26，3265 最为输入测试你的程序
+-1, 0, 1, F, 1A, E29  
+
 # 名词解释与对比 
 ## 1）Top-down design 
 ## 2） Work breakdown structure (WBS) 
