--- a/hw08.md
+++ b/hw08.md
@@ -1,13 +1,13 @@
 # 阅读 PseudocodeStandard。（答案可以打印） 
 ## 1）用伪代码描述将十进制转换成16进制的方法 
 FUNCTION  A (num)   
-a = num % 16  
+    a = num % 16  
 IF number / 16 != 0 THEN   
-A(num/16)  
+    A(num / 16)  
 CASE num % 16 OF   
-condition 10~15:PRINTF: A, B, C, D, E, F  
+    condition 10~15:PRINTF: A, B, C, D, E, F  
 OTHERS:   
-PRINT:a  
+    PRINT:a  
 
 ## 2）C语言实现（先用注释写好算法，然后翻译）  
 #include<stdio.h>  
@@ -21,40 +21,81 @@ void A (int num) {
         printf("A");  
         break;  
     case 11:  
-        printf("B");  
-        break;
-    case 12:
-        printf("C");
-        break;
-    case 13:
-        printf("D");
-        break;
-    case 14:
-        printf("E");
-        break;
-    case 15:
-        printf("F");
-        break;
-    default:
-        printf("%d", a);
-  } 
-}
- int main(void) {
-  int num;
-  scanf("%d", &num);
-  A(num);
-  return 0;
-}
+        printf("B");    
+        break;  
+    case 12:  
+        printf("C");  
+        break;  
+    case 13:  
+        printf("D");  
+        break;  
+    case 14:  
+        printf("E");  
+        break;  
+    case 15:  
+        printf("F");  
+        break;  
+    default:  
+        printf("%d", a);  
+  }   
+}  
+ int main(void) {  
+  int num;  
+  scanf("%d", &num);  
+  A(num);  
+  return 0;  
+}  
 
 ## 3）使用 -1,  0,  1,  15,   26，3265 最为输入测试你的程序
--1, 0, 1, F, 1A, E29  
+-1, 0, 1, F, 1A, E29    
 
 # 名词解释与对比 
 ## 1）Top-down design 
+A top-down approach (also known as stepwise design and in some cases used as a synonym of decomposition) is essentially the breaking down of a system to gain insight into its compositional sub-systems in a reverse engineering fashion.  
+自顶向下方法(也称为逐步设计，在某些情况下用作分解的同义词)本质上是对系统进行分解，以以逆向工程的方式深入了解其组成子系统。  
+
 ## 2） Work breakdown structure (WBS) 
+A work-breakdown structure (WBS) in project management and systems engineering, is a deliverable-oriented breakdown of a project into smaller components.  
+在项目管理和系统工程中，工作分解结构(WBS)是将项目分解为更小的组件的面向交付的分解。  
+
 ## 3）简述管理学WBS 与 信息学Top-down设计 的异同
+同：都是将大系统分解为多个小系统解决   
+异：Top-down是从上到下，WBS按照类型分  
+
 # 仔细观察您洗衣机的运作过程
 ## 1）请使用伪代码分解“正常洗衣”程序的大步骤。包括注水、浸泡等 
+0）选择洗衣模式：对应水位，注水时间   
+1）注水， 水位计计水位   
+2）浸泡， 计时器计时   
+3）电机转动, 左3次，右3次   
+4）排水， 水位计计水位   
+5）电机转动（脱水）   
+6）结束  
+
 ## 2）进一步用基本操作、控制语句（IF、FOR、WHILE等）、变量与表达式，写出每 个步骤的伪代码 
-## 3）根据你的实践，请分析“正常洗衣”与“快速洗衣”在用户目标和程序上的异同。 你认为是否存在改进（创新）空间，简单说明你的改进意见？ 
+READ 用户选择模式  
+REPEAT   
+  注水  
+UNTILL 水位=注水要求  
+REPEAT   
+  浸泡  
+UNTILL 时间 = 时间要求  
+WHILE(电机启动时间>0)  
+REPEAT   
+  电机左转3次  
+  电机右转3次  
+  时间-1单位  
+ENDWHILE  
+WHILE(水位！=0)  
+排水  
+ENDWHILE  
+FOR（脱水时间>0）   
+  电机转动  
+ENDFOR  
+关闭电源  
+
+## 3）根据你的实践，请分析“正常洗衣”与“快速洗衣”在用户目标和程序上的异同。 你认为是否存在改进（创新）空间，简单说明你的改进意见？
+异同：快速洗衣对比正常洗衣少了浸泡，但都需要经过其他步骤   
+改进：可以加大洗衣机的转速来提高洗衣质量  
+
 ## 4）通过步骤3），提取一些共性功能模块（函数），简化“正常洗衣”程序，使程序 变得更利于人类理解和修改维护。
