--- a/hw08.md
+++ b/hw08.md
@@ -99,3 +99,31 @@ ENDFOR
 改进：可以加大洗衣机的转速来提高洗衣质量  
 
 ## 4）通过步骤3），提取一些共性功能模块（函数），简化“正常洗衣”程序，使程序 变得更利于人类理解和修改维护。
+FUNCTION wait(time)  
+  SET now=timecounter();  
+  WHILE timecounter()<=now+soak_time  
+  ENDWHILE  
+ENDFUNCTION  
+  
+FUNCTION 注水(volume,timeout)  
+  SET now=timecounter();  
+  WHILE getwatervolume()<volume  
+    waterinswitch(open)  
+    IF timecounter()now+timeout  
+      halt(failure)  
+      BREAK  
+    ENDIF  
+  ENDWHILE  
+  waterinswitch(close)  
+ENDFUNCTION  
+  
+FUNCTION 排水(timeout)  
+  SET now=timecounter();  
+  WHILE getwatervolume()>0  
+    wateroutswitch(open)  
+    IF timecounter()now+timeout  
+      halt(failure)  
+      BREAK  
+    ENDIF  
+  ENDWHILE   
+ENDFUNCTION  
