--- a/hw08.md
+++ b/hw08.md
@@ -1,7 +1,7 @@
 # 阅读 PseudocodeStandard。（答案可以打印） 
 ## 1）用伪代码描述将十进制转换成16进制的方法 
 FUNCTION  A (num)   
-    a = num % 16  
+  >>   a = num % 16  
 IF number / 16 != 0 THEN   
     A(num / 16)  
 CASE num % 16 OF   
