--- a/hw09.md
+++ b/hw09.md
@@ -1,7 +1,28 @@
 # 根据后面的素材，识别类和对象。 阅读“牧师与恶魔过河”的游戏介绍并玩游戏。然后回答问题 
 ## 游戏涉及哪些类。请列表说明
+文本  
+人物  
+按钮  
+背景  
+
 ## 游戏中有哪些对象，各几个。例如，船（一个）
+游戏标题（一个）  游戏倒计时（一个）    
+文字提示（一个）  按钮（七个）     
+船（一个）        河岸（两个）  
+恶魔（三个）      牧师（三个）  
+游戏背景（三个）  
+
 ## 类和对象的区别是什么？举一个例子说明 
+类不能直接使用，对象可以直接使用。  
+类中的背景是一个抽象的概念，而对象中的游戏背景则是真正的游戏中使用的背景。  
+
 ## 游戏中的魔鬼，有哪些属性和方法？ 
+属性：贴图；是否在船中；在哪一侧的河岸上  
+方法：上船；击杀牧师；上岸    
+
 ## 假设魔鬼被鼠标点中，会执行onclick事件，请用文字 （伪代码）描述这个事件中魔鬼与其他对象沟通的过程。 
+如果在岸上，则执行上船方法，同时改变自身状态  
+如果在船上，则执行上岸方法，同时改变自身状态   
+
 ## 类或对象会是动词吗？
+可以。
