--- a/hw09.md
+++ b/hw09.md
@@ -1,11 +1,11 @@
-# 根据后面的素材，识别类和对象。 阅读“牧师与恶魔过河”的游戏介绍并玩游戏。然后回答问题 
+# 阅读“牧师与恶魔过河”的游戏介绍并玩游戏后回答问题 
 ## 游戏涉及哪些类。请列表说明
-| 类 |  
-|:-:|  
-| 文本 |  
-| 人物 |  
-| 按钮 |  
-| 背景 |     
+| 类 |    
+|:-:|    
+| 文本 |    
+| 人物 |     
+| 按钮 |    
+| 背景 |       
 
 ## 游戏中有哪些对象，各几个。例如，船（一个）
 游戏标题（一个）  游戏倒计时（一个）    文字提示（一个）  按钮（七个）     
