--- a/hw10.md
+++ b/hw10.md
@@ -3,8 +3,6 @@
 2nd : 8, 17, 33, 56, 22, 95  
 
 # Give a sorted array as list={60,65,75,80,90,95}. 
-Design an algorithm to insert the value of x into the sorted array. Then test the algorithm with value 50,67,99. 
-思考：为什么选择插入点在list头上、中间、尾巴上的三个数作为算 法测试的数据，你能解释吗？  
     
     输入插入数X
     if (x <= a[0]) {  
@@ -13,10 +11,14 @@ Design an algorithm to insert the value of x into the sorted array. Then test th
         a[0] = x;
     }
     else if(x >= a[5])
+           continue;
     else 
     for (i = 0;i < 5;i ++) {
-         if (a[i] <= x && x <= a[i+1])
-             a[]
+         if (a[i] <= x && x <= a[i+1]){
+             链表  a[i] < A < a[i + 1]
+         }
+    }
+  
     
 # What is the state of the stack after the following sequence of Push and Pop operations? 
 gun  
